[tool.poetry]
name = "dashboards"
description = "This is how python package should look like!"
version = "0.1.0"
license = "MIT"

authors = []

readme = "README.md"

repository = "https://github.com/aljeshishe/dashboards"

keywords = []

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "common" },
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.26.48"
pyaml = "^21.10.1"
requests = "^2.28.1"
munch = "^2.5.0"


[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yaml2env = 'common.yaml2env:main'
